--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,3 @@ $tertiary-font: 'Helvetica';
 $white-color: #fff;
 $grey-color: #BEBEBE;
 
-$section-spacing-desktop: 150px;
-$section-spacing-laptop: 100px;
-$section-spacing-mobile: 70px;
